# SLAMbook

./: README.md  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d3d.cpp
ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch12/: CMakeLists.txt
ch12/dense_RGBD/: CMakeLists.txt  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt
ch13/SLAM-Chap-13/: CMakeLists.txt
ch13/SLAM-Chap-13/app/: run_kitti_stereo.cpp
ch13/SLAM-Chap-13/config/: default.yaml
ch13/SLAM-Chap-13/include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h
ch13/SLAM-Chap-13/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  viewer.cpp
ch13/SLAM-Chap-13/test/: test_triangulation.cpp
ch3/: CMakeLists.txt
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: imageBasics.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch6/test/: CMakeLists.txt
ch7/: CMakeLists.txt  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch9/: CMakeLists.txt  bundle_adjustment_g2o.cpp  rotation.h
examples/: coordinateTransform.cpp  plotTrajectory.cpp
